--- a/states/TX.yaml
+++ b/states/TX.yaml
@@ -1,30 +1,27 @@
+state: "Texas"
+direction: LR
+direction: TB
+lanes:
+  - key: connect
+  - key: state_portal
+
 steps:
+  - id: open_connect
+    lane: connect
+    type: action
+    label: "Open InsCipher Connect"
+    next: start_filing
+
+  - id: start_filing
+    lane: connect
+    type: action
+    label: "Start New Filing"
+    next: portal_login
+
   - id: portal_login
     lane: state_portal
     type: action
     label: "Log in to TX Portal"
-    action: browser.goto
-    url: "https://sltx.smart.filing/login"
+    next: address_check
 
-  - id: enter_creds
-    lane: state_portal
-    type: action
-    label: "Enter creds"
-    action: browser.fill
-    selectors:
-      username: "#user"
-      password: "#pass"
-      submit:   "button[type=submit]"
-    inputs:
-      username: "${secrets.TX_USERNAME}"
-      password: "${secrets.TX_PASSWORD}"
-    next: check_login
-
-  - id: check_login
-    lane: state_portal
-    type: decision
-    label: "Authenticated?"
-    check: browser.exists
-    selector: "nav .dashboard"
-    yes_to: start_filing
-    no_to: login_error
+  - id: address_check
