--- a/states/TX.yaml
+++ b/states/TX.yaml
@@ -1,5 +1,5 @@
 state: "Texas"
-direction: TB
+direction: LR
 lanes:
   - key: connect
   - key: state_portal
@@ -24,3 +24,19 @@ steps:
     next: address_check
 
   - id: address_check
+    lane: state_portal
+    type: decision
+    label: "Address mismatch?"
+    yes_to: fix_address
+    no_to: submit_filing
+
+  - id: fix_address
+    lane: connect
+    type: action
+    label: "Fix address in Connect"
+    next: portal_login
+
+  - id: submit_filing
+    lane: state_portal
+    type: action
+    label: "Submit Filing"
