--- a/states/TX.yaml
+++ b/states/TX.yaml
@@ -1,53 +1,69 @@
 state: "Texas"
 direction: TB
+lanes:
+  - key: connect
+    title: "InsCipher Connect"
+  - key: state_portal
+    title: "State Portal"
+
 steps:
   - id: open_connect
+    lane: connect
     type: action
     label: "Open InsCipher Connect"
     next: start_filing
 
   - id: start_filing
+    lane: connect
     type: action
     label: "Start New Filing (select TX)"
     next: portal_login
 
   - id: portal_login
+    lane: state_portal
     type: action
     label: "Log in to TX Portal"
     next: address_check
 
   - id: address_check
+    lane: state_portal
     type: decision
     label: "Address mismatch?"
     yes_to: fix_address
     no_to: upload_docs
 
   - id: fix_address
+    lane: connect
     type: action
     label: "Fix address in Connect (update and save)"
     next: portal_login
 
   - id: upload_docs
+    lane: state_portal
     type: action
     label: "Upload Required Docs (package, attachments)"
     next: submit_filing
 
   - id: submit_filing
+    lane: state_portal
     type: action
     label: "Submit Filing"
     next: receipt_check
 
   - id: receipt_check
+    lane: state_portal
     type: decision
     label: "Receipt downloaded?"
     yes_to: archive_receipt
     no_to: retry_download
 
   - id: retry_download
+    lane: state_portal
     type: action
     label: "Retry download (or open in new tab)"
     next: receipt_check
 
   - id: archive_receipt
+    lane: connect
     type: action
     label: "Archive receipt in Connect (link to record)"
